# romANALiz

./: .env.example  .gitignore  Procfile  README.md  nixpacks.toml  pyproject.toml  railway.json
.github/workflows/: ci.yml
airbot/: __init__.py  main.py  web.py
airbot/collector/: __init__.py  queue.py  worker.py
airbot/config/: __init__.py  loader.py  settings.py
airbot/db/: __init__.py  factory.py  interface.py  postgres_pool.py  sqlite_pool.py
airbot/detectors/: __init__.py  base.py  example.py  registry.py
airbot/output/: __init__.py  kafka_output.py  router.py  webhook_output.py
airbot/scoring/: __init__.py  engine.py
airbot/soc_mint/: __init__.py  module.py
config/: example.yaml
deploy/: air-bot.service
docker/: .dockerignore  Dockerfile
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  index.css
k8s/: configmap.yaml  deployment.yaml
static/: app.js  index.html  style.css
static/assets/: index-B8rUyqiR.js  index-C2t9RfdU.css
tests/: __init__.py  conftest.py  test_collector.py  test_config.py  test_db.py  test_detectors.py  test_scoring.py  test_soc_mint.py  test_web.py
